[package]
name = "egui-d3d11"
version = "0.4.0"
edition = "2021"
authors = ["sy1ntexx"]
description = "D3D11 backend for egui library."
repository = "https://github.com/sy1ntexx/egui-d3d11"
exclude = [
    "example-wnd"
]
license = "MIT"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]

[dependencies]
parking_lot = "0.11.2"
thiserror = "1.0.0"
egui = "0.16.1"

[features]
no-msgs = []

[dependencies.windows]
version = "0.32.0"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_System_SystemServices",
    "Win32_Graphics_Dxgi_Common",
    "Win32_UI_Controls_RichEdit",
    "Win32_Graphics_Direct3D11",
    "Win32_System_DataExchange",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Hlsl",
    "Win32_Foundation"
]